--- a/visual.ipynb
+++ b/visual.ipynb
@@ -129,6 +129,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hahah True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = True\n",
+    "\n",
+    "print(f'hahah {a}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
